Removing name duplication from CollectionViewComponentComponent, also splitting it to two component: Table and CollectionWrapper

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <h1>Collections mixer</h1>
 
-<app-collection-view-component></app-collection-view-component>
-<app-collection-view-component></app-collection-view-component>
-
+<app-collection-wrapper></app-collection-wrapper>
+<app-collection-wrapper></app-collection-wrapper>
