--- a/src/app/collection-wrapper/collection-wrapper.component.html
+++ b/src/app/collection-wrapper/collection-wrapper.component.html
@@ -11,15 +11,6 @@
     <button (click)="onParseCollectionClick()">Parse data</button>
 </ng-template>
 <ng-template #elseBlock>
-    <table>
-        <tr>
-            <th *ngFor="let key of collectionMetaData">{{ key.name }}</th>
-        </tr>
-        <tr *ngFor="let datum of collectionData">
-            <td *ngFor="let key of collectionMetaData">
-                {{ datum[key.name] }}
-            </td>
-        </tr>
-    </table>
+    <app-table [data]="collectionData"></app-table>
     <button (click)="editData()">Edit data</button>
 </ng-template>
