Adding event for CollectionWrapper

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>Collections mixer</h1>
 
-<app-collection-wrapper></app-collection-wrapper>
-<app-collection-wrapper></app-collection-wrapper>
+<app-collection-wrapper name="a" (collectionSet)="collectionSet($event)"></app-collection-wrapper>
+<app-collection-wrapper name="b" (collectionSet)="collectionSet($event)"></app-collection-wrapper>
