Displaying result on outcome table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,6 @@
 <app-collection-wrapper
     *ngIf="collections.hasOwnProperty('r')"
     name="r"
+    [rawJSON]="collections['r'].data | json"
     (collectionSet)="collectionSet($event)">
 </app-collection-wrapper>
