--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -1,9 +1,17 @@
 table {
+    width          : 100%;
     border-collapse: collapse;
     border-spacing : 0;
 
-    td, th {
-        padding   : 10px 5px;
+    td,
+    th {
+        min-width: 100px;
+        padding  : 10px 5px;
+    }
+
+    .index {
+        min-width: 30px;
+        width    : 30px;
     }
 
     thead th {
@@ -23,8 +31,19 @@ table {
         }
 
         td {
-            overflow  : hidden;
-            word-break: normal;
+            overflow      : hidden;
+            word-break    : normal;
+            text-align    : center;
+            vertical-align: middle;
+        }
+
+        td.index {
+            background: darkslategray;
+            color     : white;
+        }
+
+        td.empty {
+            font-style: italic;
         }
     }
 }
