--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,15 @@
 <h1>Collections mixer</h1>
 
-<app-collection-wrapper name="a" (collectionSet)="collectionSet($event)"></app-collection-wrapper>
-<app-collection-wrapper name="b" (collectionSet)="collectionSet($event)"></app-collection-wrapper>
+<app-collection-wrapper (collectionSet)="collectionASet($event)"></app-collection-wrapper>
+<app-collection-wrapper (collectionSet)="collectionBSet($event)"></app-collection-wrapper>
 
 <div *ngIf="areBothCollectionSet()">
     <app-choose-operation
-        [columnsForFirstCollection]="collections['a'].metadata"
-        [columnsForSecondCollection]="collections['b'].metadata"
+        [columnsForFirstCollection]="aCollectionColumns()"
+        [columnsForSecondCollection]="bCollectionColumns()"
         (operationChoose)="onOperationChoose($event)">
     </app-choose-operation>
 </div>
 
-<app-collection-wrapper
-    *ngIf="collections.hasOwnProperty('r')"
-    name="r"
-    [rawJSON]="collections['r'].data | json"
-    (collectionSet)="collectionSet($event)">
+<app-collection-wrapper *ngIf="resultCollection" [rawJSON]="resultAsJSON()">
 </app-collection-wrapper>
