--- a/src/app/choose-column/choose-column.component.html
+++ b/src/app/choose-column/choose-column.component.html
@@ -1,3 +1,3 @@
 <select [(ngModel)]="selectedColumn" (ngModelChange)="selectedColumnChange.emit(selectedColumn)">
-    <option *ngFor="let column of columns">{{ column.name }}</option>
+    <option *ngFor="let column of columns" [value]="column">{{ column }}</option>
 </select>
