Adjusting Table component into new matadata logic

--- a/src/app/collection-wrapper/collection-wrapper.component.html
+++ b/src/app/collection-wrapper/collection-wrapper.component.html
@@ -9,6 +9,6 @@
     <button (click)="onParseCollectionClick()">Parse data</button>
 </ng-template>
 <ng-template #hasNotCollection>
-    <app-table [data]="collection.data"></app-table>
+    <app-table [data]="collection"></app-table>
     <button (click)="editData()">Edit data</button>
 </ng-template>
