Fixing problem with no refreshing result data

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -11,5 +11,5 @@
     </app-choose-operation>
 </div>
 
-<app-collection-wrapper *ngIf="resultCollection" [rawJSON]="resultAsJSON()">
+<app-collection-wrapper *ngIf="resultCollectionAsJSON" [rawJSON]="resultCollectionAsJSON">
 </app-collection-wrapper>
