--- a/src/app/components/collection-wrapper/collection-wrapper.component.scss
+++ b/src/app/components/collection-wrapper/collection-wrapper.component.scss
@@ -1,25 +1,34 @@
 div {
-    width: 100%;
+    width : 100%;
     margin: 10px;
 }
 
 span {
-    display: block;
+    display         : block;
     background-color: #fa4747;
-    margin: 2px;
-    padding: 5px 10px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin          : 2px;
+    padding         : 5px 10px;
+    font-family     : Verdana, Geneva, Tahoma, sans-serif;
 }
 
 textarea {
     box-sizing: border-box;
-    overflow: auto;	
-    width: 100%;
-	height: 120px;
-	border: 3px solid #cccccc;
-	padding: 5px;
+    overflow  : auto;
+    width     : 100%;
+    height    : 120px;
+    border    : 3px solid #cccccc;
+    padding   : 5px;
 }
 
-button {
+button.full-width {
     width: 100%;
+}
+
+button.edit-data {
+    width: 75%;
+}
+
+button.show-as-csv {
+    width: 25%;
+    float: right;
 }
