--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -13,6 +13,20 @@ table {
         -webkit-user-select: none;
         -ms-user-select    : none;
         user-select        : none;
+
+        .note {
+            font-size: xx-small;
+            text-transform: uppercase;
+            color: gold;
+            display: block;
+        }
+
+        button {
+            font-size: xx-small;
+            width: 100px;
+            line-height: 1;
+            margin: 0 10px;
+        }
     }
 
     .index {
