--- a/src/app/components/collection-wrapper/collection-wrapper.component.html
+++ b/src/app/components/collection-wrapper/collection-wrapper.component.html
@@ -8,7 +8,10 @@
         <button class="full-width" (click)="onParseCollectionClick()">Parse data</button>
     </ng-container>
     <ng-container *ngSwitchCase="'table'">
-        <app-table [data]="collection" (primaryKeyColumnSet)="primaryKeyColumnSet.emit($event)"></app-table>
+        <app-table
+            [data]="collection"
+            [readonly]="readonly"
+            (primaryKeyColumnSet)="primaryKeyColumnSet.emit($event)"></app-table>
 
         <button class="edit-data" (click)="editData()">Edit data</button>
         <button class="show-as-csv" (click)="showAsCSV()">Show CSV</button>
